# crm2

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.observability.yml  package.json  pnpm-workspace.yaml  pyproject.toml  turbo.json
apps/ai_engine/app/: __init__.py  main.py
apps/api/app/: __init__.py  config.py  main.py
apps/web/: Dockerfile  next.config.js  package.json
apps/web/src/app/: page.tsx
apps/webhook_gateway/app/: __init__.py  main.py
apps/worker/app/: __init__.py  main.py
apps/workflow_worker/app/: __init__.py  main.py
commerce-ai-core/docs/architecture/: 00-product-vision.md  01-architecture-principles.md  02-folder-structure.md  03-module-contract.md  04-production-rules.md  05-naming-conventions.md  06-definition-of-done.md  07-release-gates.md  08-risk-register.md  09-ai-governance.md  10-messaging-governance.md
commerce-ai-core/docs/progress/: phase-01-report.md
commerce-ai-core/docs/research/: 00-research-report.md
commerce-ai-core/scripts/: check-phase01.sh
infra/docker/: ai-engine.Dockerfile  api.Dockerfile  web.Dockerfile  webhook-gateway.Dockerfile  worker.Dockerfile  workflow-worker.Dockerfile
infra/minio/: README.md  create-buckets.sh
infra/postgres/: README.md  extensions.sql
infra/qdrant/: README.md  config.yaml
infra/redis/: redis.conf
infra/temporal/: README.md
infra/temporal/dynamicconfig/: development.yaml
requirements/: ai-engine.txt  api.txt  dev.txt  webhook-gateway.txt  worker.txt  workflow-worker.txt
scripts/: check-phase03.sh  clean.sh  dev.sh  health.sh  smoke-test.sh  stop.sh
